--- a/0.datasetdetails.md
+++ b/0.datasetdetails.md
@@ -1,12 +1,37 @@
-# Dataset details
-- The number of new cases are increasing day by day around the world.
-- This dataset has information from the states and union territories of India at daily level.
-- Vaccination data comes from covid19india.
-- There are 7486 instances, i.e., Total Individuals Vaccinated.
-- Source URL: [https://www.kaggle.com/datasets/sudalairajkumar/covid19-in-india](https://www.kaggle.com/datasets/sudalairajkumar/covid19-in-india) (appeared on Kaggle).
-- The data was recorded from the beginning of 16th Jan 2021 to 12th Aug 2021.
-- size 1.4 MB+
-- Has Extreme outliers [ use treatment wisely ]
+# 🦠 COVID-19 Vaccination Analysis in India
+
+<p align="center">
+  <img src="https://img.shields.io/badge/Dataset-Kaggle-blue?style=for-the-badge&logo=kaggle" alt="Kaggle Dataset">
+  <img src="https://img.shields.io/badge/Python-Data%20Analysis-yellow?style=for-the-badge&logo=python" alt="Python">
+  <img src="https://img.shields.io/badge/Domain-Healthcare-red?style=for-the-badge&logo=medical" alt="Healthcare">
+  <img src="https://img.shields.io/badge/Status-Completed-success?style=for-the-badge" alt="Status">
+</p>
+
+
+## 🔍 Dataset Description
+
+- **Source**: [COVID-19 in India](https://www.kaggle.com/datasets/sudalairajkumar/covid19-in-india) (Kaggle)
+- **Time Period**: January 16, 2021 - August 12, 2021
+- **Scope**: State/UT level daily vaccination data
+- **Size**: 1.4 MB+
+- **Records**: 7,486 instances (Total Individuals Vaccinated)
+- **Characteristics**: Contains extreme outliers requiring careful treatment
+- **Source Attribution**: Data compiled from covid19india
+
+## 📊 Dataset Features
+
+The dataset contains 24 features tracking various aspects of India's vaccination campaign:
+
+| Category | Features |
+|----------|----------|
+| **Temporal & Geographic** | • Updated (Date)<br>• State (Region name) |
+| **Vaccination Volume** | • Total Doses Administered<br>• Sessions<br>• Sites<br>• First Dose Administered<br>• Second Dose Administered<br>• Total Individuals Vaccinated |
+| **Gender Distribution** | • Male (Doses Administered)<br>• Female (Doses Administered)<br>• Transgender (Doses Administered)<br>• Male (Individuals Vaccinated)<br>• Female (Individuals Vaccinated)<br>• Transgender (Individuals Vaccinated) |
+| **Vaccine Types** | • Covaxin (Doses Administered)<br>• CoviShield (Doses Administered)<br>• Sputnik V (Doses Administered) |
+| **Age Groups** | • 18-44 Years (Doses Administered)<br>• 45-60 Years (Doses Administered)<br>• 60+ Years (Doses Administered)<br>• 18-44 Years (Individuals Vaccinated)<br>• 45-60 Years (Individuals Vaccinated)<br>• 60+ Years (Individuals Vaccinated) |
+| **Safety** | • AEFI (Adverse Events Following Immunization) |
+
+_**- Has Extreme outliers [ use treatment wisely ]**_
 
 
 ![image](https://github.com/akhileshj2004/covid19analysisEDA/assets/168991836/f5e87a63-94e9-4462-b9af-b4b7222259fa)
@@ -37,6 +62,7 @@
 - Female(Individuals Vaccinated): No of  Female people vaccinated
 - Transgender(Individuals Vaccinated): No of Transgenders  vaccinated
 - Total Individuals Vaccinated: Total No of  people vaccinated
+
 
 ![image](https://github.com/akhileshj2004/covid19analysisEDA/assets/168991836/4741dc31-7353-4b9b-8106-64690d1ff550)
 
